--- a/programming_03/Makefile
+++ b/programming_03/Makefile
@@ -1,7 +1,10 @@
 CC = cc
 
-sim: sim.o error.o collect.o process.o
-	$(CC) -o sim sim.o error.o collect.o process.o
+sim: sim.o error.o collect.o process.o dump.o
+	$(CC) -o sim sim.o error.o collect.o process.o dump.o
+
+dump.o: dump.c dump.h
+	$(CC) -c dump.c
 
 process.o: process.c process.h error.h
 	$(CC) -c process.c
