--- a/programming_05/Makefile
+++ b/programming_05/Makefile
@@ -1,10 +1,7 @@
 CC = g++
 
-branch: branch.o
-	$(CC) -o branch branch.o 
-
-branch.o: branch.cpp
-	$(CC) -c branch.cpp
+branch: branch.cpp
+	$(CC) -o branch branch.cpp 
 
 clean:
 	rm -f *.o branch
