branch header file

--- a/programming_05/Makefile
+++ b/programming_05/Makefile
@@ -1,7 +1,10 @@
 CC = g++
 
-branch: branch.cpp
-	$(CC) -o branch branch.cpp 
+branch: branch.o
+	$(CC) -o branch branch.o
+
+branch.o: branch.cpp branch.h
+	$(CC) -c branch.cpp branch.h
 
 clean:
 	rm -f *.o branch
